[package]
name = "jam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.26.0"
daggy = "0.8.0"
either = "1.8.0"
radix_trie = "0.2.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
slog = "2.7.0"
slog-term = "2.9.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tui = "0.19.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.16.0"
