[package]
name = "jam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.26.0"
daggy = "0.8.0"
dirs = "5.0.1"
either = "1.8.0"
ratatui = "0.26.1"
sequence_trie = "0.3.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.17"
slog = "2.7.0"
slog-term = "2.9.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tempfile = "3.10.1"
thiserror = "1.0.38"

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
rstest = "0.16.0"
tempdir = "0.3.7"
